<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6.0dip"
        app:cardElevation="2.0dip"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_large">

            <RelativeLayout
                android:layout_width="20.0dip"
                android:layout_height="20.0dip"
                android:layout_marginTop="1.0dip">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerInParent="true"
                    android:tint="@color/grey_10"
                    app:srcCompat="@drawable/shape_circle" />

                <ImageView
                    android:layout_width="15.0dip"
                    android:layout_height="15.0dip"
                    android:layout_centerInParent="true"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_cow" />
            </RelativeLayout>

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0.0dip" />

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textColor="@color/green_900" />

                    <TextView
                        android:id="@+id/nombre"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.38 USD"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/propose"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textColor="@color/green_900" />

                    <TextView
                        android:id="@+id/propose"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.38 USD"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Peso"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textColor="@color/green_900" />

                    <TextView
                        android:id="@+id/Peso"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.38 USD"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/genero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Macho"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/green_500" />

                <TextView
                    android:id="@+id/produce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ternero"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_40" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>